split/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: sonarqube
  name: sonarqube-service
  labels:
    app: sonarqube
spec:
  type: NodePort
  ports:
    - name: sonar-internal
      port: 9000
      protocol: TCP
      targetPort: 9000
      nodePort: 30090
  selector:
    app: sonarqube
  # clusterIP: None
