split/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sonarqube
  name: sonarqube-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: sonarqube.test
    http:
      paths:
      - backend:
          service:
            name: sonarqube-service
            port:
              number: 9000
        path: /
        pathType: Prefix
